--- a/index.html
+++ b/index.html
@@ -1,29 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appalachian Dental Chatbot</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        .chat-container { width: 100%; max-width: 400px; margin: auto; }
-        .chat-box { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: auto; }
-        .input-container { margin-top: 10px; }
-        input { width: 80%; padding: 10px; }
-        button { padding: 10px; background: blue; color: white; border: none; cursor: pointer; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Appalachian Dental Chatbot</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #f0f4f8, #ffffff);
+      color: #1f2937;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 20px;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    header img {
+      max-height: 90px;
+      margin-bottom: 10px;
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+      color: #7c1c1c;
+      font-weight: 700;
+    }
+
+    .welcome {
+      font-size: 1rem;
+      color: #4b5563;
+      margin-top: 8px;
+    }
+
+    .chat-container {
+      width: 100%;
+      max-width: 700px;
+      background-color: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07);
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .chat-box {
+      height: 360px;
+      overflow-y: auto;
+      border: 1px solid #e5e7eb;
+      border-radius: 12px;
+      padding: 20px;
+      background-color: #f9fafb;
+      font-size: 1rem;
+    }
+
+    .chat-entry {
+      margin-bottom: 14px;
+    }
+
+    .chat-entry strong {
+      display: block;
+      color: #111827;
+      font-weight: 600;
+      margin-bottom: 5px;
+    }
+
+    .chat-entry p {
+      margin: 0;
+      color: #374151;
+      line-height: 1.4;
+    }
+
+    .input-container {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    #userInput {
+      flex: 1;
+      padding: 12px 16px;
+      border-radius: 10px;
+      border: 1px solid #d1d5db;
+      font-size: 1rem;
+      transition: border-color 0.2s;
+    }
+
+    #userInput:focus {
+      outline: none;
+      border-color: #2563eb;
+    }
+
+    button {
+      background-color: #2563eb;
+      color: #ffffff;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 600;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #1d4ed8;
+    }
+  </style>
 </head>
 <body>
-
+  <header>
+    <img src=C:\Users\eric0\OneDrive\Desktop\Logo-Transparent-2.png" alt="Appalachian Dental Logo" />
     <h1>Appalachian Dental Chatbot</h1>
-    <div class="chat-container">
-        <div class="chat-box" id="chatBox"></div>
-        <div class="input-container">
-            <input type="text" id="userInput" placeholder="Type a question...">
-            <button onclick="sendMessage()">Send</button>
-        </div>
-    </div>
+    <div class="welcome">Welcome! Ask anything about dental insurance codes, procedures, or maximizing billing.</div>
+  </header>
 
-    <script src="script.js"></script>
+  <div class="chat-container">
+    <div class="chat-box" id="chatBox"></div>
+    <div class="input-container">
+      <input type="text" id="userInput" placeholder="Type your question here..." />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
