Updated chatbot design and layout

--- a/index.html
+++ b/index.html
@@ -69,20 +69,25 @@
     }
 
     .chat-entry {
-      margin-bottom: 14px;
+      margin-bottom: 20px;
+      background: #ffffff;
+      padding: 14px 16px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
     }
 
     .chat-entry strong {
       display: block;
       color: #111827;
       font-weight: 600;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
     }
 
     .chat-entry p {
       margin: 0;
       color: #374151;
-      line-height: 1.4;
+      line-height: 1.6;
+      white-space: pre-wrap;
     }
 
     .input-container {
@@ -124,7 +129,7 @@
 </head>
 <body>
   <header>
-    <img src=C:\Users\eric0\OneDrive\Desktop\Logo-Transparent-2.png" alt="Appalachian Dental Logo" />
+    <img src="C:\Users\eric0\OneDrive\Desktop\Logo-Transparent-2.jpg" alt="Appalachian Dental Logo" />
     <h1>Appalachian Dental Chatbot</h1>
     <div class="welcome">Welcome! Ask anything about dental insurance codes, procedures, or maximizing billing.</div>
   </header>
