--- a/index.html
+++ b/index.html
@@ -5,158 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Appalachian Dental Chatbot</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #f0f4f8, #ffffff);
-      color: #1f2937;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      padding: 20px;
     }
-
-    header {
-      text-align: center;
-      margin-bottom: 30px;
+    .chat-bubble {
+      @apply max-w-lg p-4 rounded-xl shadow-md whitespace-pre-wrap;
     }
-
-    header img {
-      max-height: 90px;
-      margin-bottom: 10px;
+    .user {
+      @apply bg-blue-100 text-blue-900 self-end;
     }
-
-    header h1 {
-      font-size: 2.2rem;
-      color: #7c1c1c;
-      font-weight: 700;
-    }
-
-    .welcome {
-      font-size: 1rem;
-      color: #4b5563;
-      margin-top: 8px;
-    }
-
-    .chat-container {
-      width: 100%;
-      max-width: 700px;
-      background-color: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07);
-      padding: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
-
-    .chat-box {
-      height: 360px;
-      overflow-y: auto;
-      border: 1px solid #e5e7eb;
-      border-radius: 12px;
-      padding: 20px;
-      background-color: #f9fafb;
-      font-size: 1rem;
-    }
-
-    .chat-entry {
-      margin-bottom: 20px;
-      padding: 14px 16px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
-    }
-
-    .chat-entry.user {
-      background: #e0f2fe;
-      border-left: 4px solid #0284c7;
-    }
-
-    .chat-entry.ai {
-      background: #fef3c7;
-      border-left: 4px solid #ca8a04;
-    }
-
-    .chat-entry strong {
-      display: block;
-      color: #111827;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .chat-entry time {
-      font-size: 0.75rem;
-      color: #6b7280;
-      float: right;
-    }
-
-    .chat-entry p {
-      margin: 4px 0 0;
-      color: #374151;
-      line-height: 1.6;
-      white-space: pre-wrap;
-    }
-
-    .input-container {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    #userInput {
-      flex: 1;
-      padding: 12px 16px;
-      border-radius: 10px;
-      border: 1px solid #d1d5db;
-      font-size: 1rem;
-      transition: border-color 0.2s;
-    }
-
-    #userInput:focus {
-      outline: none;
-      border-color: #2563eb;
-    }
-
-    button {
-      background-color: #2563eb;
-      color: #ffffff;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 1rem;
-      font-weight: 600;
-      transition: background-color 0.2s ease;
-    }
-
-    button:hover {
-      background-color: #1d4ed8;
+    .bot {
+      @apply bg-gray-100 text-gray-800 self-start;
     }
   </style>
 </head>
-<body>
-  <header>
-    <img src="/sphere-logo.png" alt="Sphere AI Logo" class="h-12">
-    <h1>Appalachian Dental Chatbot</h1>
-    <div class="welcome">Welcome! Ask anything about dental insurance codes, procedures, or maximizing billing.</div>
+<body class="bg-gradient-to-br from-sky-50 to-white min-h-screen flex flex-col items-center px-4 py-10">
+  <header class="text-center mb-8">
+    <img src="/logo.png" alt="Appalachian Dental Logo" class="h-16 mx-auto mb-2">
+    <img src="/Sphere%20AI%20Logo%20(Official%20-%20Circle).png" alt="Sphere AI Logo" class="h-12 mx-auto mb-3">
+    <h1 class="text-4xl font-extrabold text-red-800 tracking-tight">Appalachian Dental Chatbot</h1>
+    <p class="text-lg text-gray-600 mt-2">Welcome! Ask anything about dental insurance codes, procedures, or maximizing billing.</p>
   </header>
 
-  <div class="chat-container">
-    <div class="chat-box" id="chatBox"></div>
-    <div class="input-container">
-      <input type="text" id="userInput" placeholder="Type your question here..." />
-      <button onclick="sendMessage()">Send</button>
+  <main class="w-full max-w-3xl bg-white shadow-2xl rounded-3xl p-8 flex flex-col gap-6">
+    <div id="chatBox" class="flex flex-col gap-4 overflow-y-auto max-h-[500px] px-2"></div>
+    <div class="flex items-center gap-4">
+      <input type="text" id="userInput" placeholder="Type your question here..."
+        class="flex-1 p-4 rounded-xl border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+      <button onclick="sendMessage()" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-3 rounded-xl">Send</button>
     </div>
-  </div>
+    <button onclick="clearChat()" class="text-sm text-blue-600 hover:underline self-end">Clear chat</button>
+  </main>
 
-  <script src="script.js"></script>
+  <footer class="mt-10 text-center text-gray-500 text-sm">
+    <p>Powered by Sphere AI</p>
+  </footer>
+
+  <script src="/script.js"></script>
 </body>
 </html>
