--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
   </main>
 
   <footer class="mt-10 text-center text-gray-500 text-sm">
-    <p>Powered by Sphere AI</p>
+    <div class="flex flex-col items-center gap-2">
+      <p>Powered by Sphere AI</p>
+    </div>
   </footer>
 
-  <!-- 👇 Script loaded after body for best practice -->
   <script src="script.js"></script>
 </body>
 </html>
